# mcp-demo

./: .env  .gitignore  LICENSE  README.md  main.py  pyproject.toml
mcp-client/: config.py  config.yaml  mcp_client.py  server_connection.py  server_discovery.py
src/clients/: __init__.py  cli.py  commands.py  mcp_client.py
src/config/: config_manager.py  default_config.yaml
src/connectors/: __init__.py  base.py  command.py  sse.py  stdio.py
src/llm/: anthropic.py  base.py  factory.py  google.py  openai.py
src/log/: __init__.py  logger.py
src/mcp-server/: system_tools.py
